# winstack-integrity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bad.decision.json  decision.json  demo.proof.json  pyproject.toml
truthlock/: cli.py  core.py
winstack_integrity/: cli.py  core.py
winstack_integrity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wise/: cli.py
